<resources>
    <string name="auto_update">更新提醒</string>
    <string name="new_version">最新版本：</string>
    <string name="update_log">更新日志：</string>
    <string name="update_right_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="already_new_version">已经是最新版本！</string>
    <string name="app_name">风云即拍</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="publish_unit">中国气象频道官方出品</string>
    <string name="living">直播</string>
    <string name="person">个人</string>
    <string name="camera">拍摄</string>
    <string name="video">视频</string>
    <string name="meet">会商</string>
    <string name="location_failed">定位失败</string>
    <string name="get_information_failed">获取城市信息失败</string>
    <string name="unit_c">℃</string>
    <string name="unit_percent">%</string>
    <string name="fact">实况</string>
    <string name="feel">体感</string>
    <string name="temprate_no">暂无</string>
    <string name="humitidy">湿度：</string>
    <string name="rainfall">降水：</string>
    <string name="aqi">空气质量：</string>
    <string name="refresh">更新</string>
    <string name="current">当前</string>
    <string name="body">体感</string>
    <string name="mm">mm</string>
    <string name="studio">演播室</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="sd">超清</string>
    <string name="hd">高清</string>
    <string name="bd">标清</string>
    <string name="live_pain">辛苦直播</string>
    <string name="live_complete">直播已完成</string>
    <string name="back_head_page">点击返回首页</string>
    <string name="head_page">首页</string>
    <string name="userName">账号：</string>
    <string name="passWord">密码：</string>
    <string name="confirm_pwd">确认密码：</string>
    <string name="input_address">请输入地址</string>
    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_username_hint">请输入6~12位账号</string>
    <string name="input_password_hint">请输入6~15位密码</string>
    <string name="input_password_again">请确认密码</string>
    <string name="input_nickname">请输入用户昵称</string>
    <string name="input_original_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_repeat_pwd">输入确认密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="input_mail">请输入邮箱</string>
    <string name="input_phone">请输入手机号</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="third_login">使用第三方登录</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <string name="blog">微博</string>
    <string name="is_logining">正在登录中...</string>
    <string name="login_failed">登录失败</string>
    <string name="my">个人中心</string>
    <string name="my_upload">我的上传</string>
    <string name="my_msg">我的消息</string>
    <string name="my_score">我的积分</string>
    <string name="my_check">视频审核</string>
    <string name="my_setting">设置</string>
    <string name="my_about">关于</string>
    <string name="my_response">免责申明</string>
    <string name="is_loading">正在加载</string>
    <string name="confirm_exit">再按一次退出</string>
    <string name="confirm_stop_video">再按一次停止录像</string>
    <string name="confirm_stop_broadcast">再按一次停止直播</string>
    <string name="invalid_mail">邮箱格式不正确</string>
    <string name="invalid_phone">手机号码格式不正确</string>
    <string name="input_title">请输入标题</string>
    <string name="only_one_camera">该设备只有一个摄像头</string>
    <string name="is_connectting_service">正在连接服务...</string>
    <string name="connect_success">成功连接到服务器</string>
    <string name="connect_failed">连接网络失败</string>
    <string name="delete_video">确定删除该视频？</string>
    <string name="delete_pics">是否删除所选的</string>
    <string name="upload_pics">是否上传所选的</string>
    <string name="pictrue">个文件？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="unselect_all">全不选</string>
    <string name="upload_input_title">上传请输入标题</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_success_prompt">您可以在以下位置找到它\n个人中心-我的上传-已上传</string>
    <string name="upload_failed">上传失败！</string>
    <string name="i_know">我知道了</string>
    <string name="at_most_nine">你最多只能拍9张照片</string>
    <string name="upload_yes">已上传</string>
    <string name="upload_no">未上传</string>
    <string name="video_wall">视频墙</string>
    <string name="most_new">最新</string>
    <string name="most_hot">最热</string>
    <string name="video_detail">详情</string>
    <string name="no_name">未命名</string>
    <string name="comment">评论</string>
    <string name="submit">发送</string>
    <string name="nomore_comment">没有更多的评论了！</string>
    <string name="use_help">使用帮助</string>
    <string name="modify_pwd">修改密码</string>
    <string name="push_news">消息推送</string>
    <string name="local_save">本地存储</string>
    <string name="local_cache">本地缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="switch_source">切换数据源</string>
    <string name="sure_delete">确定要删除？</string>
    <string name="local_content">删除拍摄后存储在本地的视频和照片</string>
    <string name="cache_content">删除从网络缓存在本地的视频、图片等</string>
    <string name="complete">完成</string>
    <string name="original_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="repeat_pwd">确认</string>
    <string name="logout">退出登录</string>
    <string name="live_login">直播登录</string>
    <string name="click_login">点击登录</string>
    <string name="sure_logout">确定要退出登录吗？</string>
    <string name="stay_landscape">拍摄时请保持手机横屏~</string>
    <string name="stay_alive_landscape">直播时请保持手机横屏~</string>
    <string name="service_hotline">服务热线：</string>
    <string name="service_hotline2">服务热线</string>
    <string name="supply_unit">本版权信息由北京华风创新网络技术有限公司提供</string>
    <string name="hotline_num">010-68408068</string>
    <string name="web_addr">http://www.tianqi.cn/windcloud/fengyunjipai.html</string>
    <string name="statement">声明</string>
    <string name="statement_content1">\t\t\t\t通过本APP客户端发布的所有信息，北京华风创新网络技术有限公司和中国气象频道拥有独家并永久免费的使用权，并有权进行再授权，并有权对相关信息进行改写、修订、分发等。\n\t\t\t\t所有内容均不代表本APP客户端意见观点，内容发布者需对信息的真实性负责。</string>
    <string name="version_code">版本号：</string>
    <string name="dial_phone">拨打</string>
    <string name="exchange">兑换</string>
    <string name="input_alipay_username">请输入支付宝账号</string>
    <string name="input_alipay_pwd">请输入登录密码</string>
    <string name="apply_exchange">申请兑换</string>
    <string name="score_exchange">积分兑换</string>
    <string name="error_pwd">密码错误</string>
    <string name="apply_submited">申请已提交</string>
    <string name="input_search_content">请输入搜索内容</string>
    <string name="switch_bd">已切换为标清模式</string>
    <string name="switch_hd">已切换为高清模式</string>
    <string name="file_too_big">对不起，文件不能超过150MB</string>
    <string name="camera_video">拍摄视频/图片</string>
    <string name="select_video">本地视频上传</string>
    <string name="select_pic">本地图片上传</string>
    <string name="camera_or_select">拍摄或选择视频</string>
    <string name="not_found_video">视频没找到</string>
    <string name="not_found_pic">图片没找到</string>
    <string name="not_check">未审核</string>
    <string name="pass_check">审核通过</string>
    <string name="refuse_check">审核拒绝</string>
    <string name="not_check2">未\n审核</string>
    <string name="pass_check2">审核\n通过</string>
    <string name="refuse_check2">审核\n拒绝</string>
    <string name="no_location">未知位置</string>
    <string name="cell_upload">上传</string>
    <string name="cell_delete">删除</string>
    <string name="most_select_nine">一次最多只能上传9张图片</string>
    <string name="already_select">已选中</string>
    <string name="file_count">个文件</string>
    <string name="delete_all_files">已删除所选文件</string>
    <string name="upload_all_files">已上传所选文件</string>
    <string name="sure_exit">确定退出编辑界面？</string>
    <string name="chart_north">北风</string>
    <string name="chart_north_east">东北风</string>
    <string name="chart_east">东风</string>
    <string name="chart_south_east">东南风</string>
    <string name="chart_south">南风</string>
    <string name="chart_south_west">西南风</string>
    <string name="chart_west">西风</string>
    <string name="chart_north_west">西北风</string>
    <string name="weather0">晴</string>
    <string name="weather1">多云</string>
    <string name="weather2">阴</string>
    <string name="weather3">阵雨</string>
    <string name="weather4">雷阵雨</string>
    <string name="weather5">雨夹冰雹</string>
    <string name="weather6">雨夹雪</string>
    <string name="weather7">小雨</string>
    <string name="weather8">中雨</string>
    <string name="weather9">大雨</string>
    <string name="weather10">暴雨</string>
    <string name="weather11">大暴雨</string>
    <string name="weather12">特大暴雨</string>
    <string name="weather13">阵雪</string>
    <string name="weather14">小雪</string>
    <string name="weather15">中雪</string>
    <string name="weather16">大雪</string>
    <string name="weather17">暴雪</string>
    <string name="weather18">雾</string>
    <string name="weather19">冻雨</string>
    <string name="weather20">沙尘暴</string>
    <string name="weather21">小雨-中雨</string>
    <string name="weather22">中雨-大雨</string>
    <string name="weather23">大雨-暴雨</string>
    <string name="weather24">暴雨-大暴雨</string>
    <string name="weather25">大暴雨-特大暴雨</string>
    <string name="weather26">小雪-中雪</string>
    <string name="weather27">中雪-大雪</string>
    <string name="weather28">大雪-暴雪</string>
    <string name="weather29">浮尘</string>
    <string name="weather30">扬沙</string>
    <string name="weather31">强沙尘暴</string>
    <string name="weather32">浓雾</string>
    <string name="weather33">雪</string>
    <string name="weather49">强浓雾</string>
    <string name="weather53">霾</string>
    <string name="weather54">中度霾</string>
    <string name="weather55">重度霾</string>
    <string name="weather56">严重霾</string>
    <string name="weather57">大雾</string>
    <string name="weather58">特强浓雾</string>
    <string name="wind_dir0">无持续风向</string>
    <string name="wind_dir1">东北风</string>
    <string name="wind_dir2">东风</string>
    <string name="wind_dir3">东南风</string>
    <string name="wind_dir4">南风</string>
    <string name="wind_dir5">西南风</string>
    <string name="wind_dir6">西风</string>
    <string name="wind_dir7">西北风</string>
    <string name="wind_dir8">北风</string>
    <string name="wind_dir9">旋转风</string>
    <string name="wind_force0">微风</string>
    <string name="wind_force1">1级</string>
    <string name="wind_force2">2级</string>
    <string name="wind_force3">3级</string>
    <string name="wind_force4">4级</string>
    <string name="wind_force5">5级</string>
    <string name="wind_force6">6级</string>
    <string name="wind_force7">7级</string>
    <string name="wind_force8">8级</string>
    <string name="wind_force9">9级</string>
    <string name="wind_force10">10级</string>
    <string name="wind_force11">11级</string>
    <string name="wind_force12">12级</string>
    <string name="video_decoding">视频正在解码中，请稍等...</string>
    <string name="video_generating">视频生成中...</string>
    <string name="video_edit">编辑视频</string>
    <string name="video_join">视频合成</string>
    <string name="video_drag_sort">视频将按照列表顺序进行合成，您可以长按拖动进行片段顺序调整。</string>
    <string name="video_join_preview">片段合成预览</string>
    <string name="video_preview">视频预览</string>
    <string name="video_only_save">仅保存</string>
    <string name="video_save_and_publish">保存并发布</string>
    <string name="video_edit_segment">请拖拽两侧滑块选择剪裁区域</string>
    <string name="video_repeate_segment">设置重复的片段</string>
    <string name="video_reverse">开启视频倒放</string>
    <string name="vod_ffplay">ffplay</string>
    <string name="vod_exo">exo</string>
    <string name="delete">删除</string>
    <string name="music_empty">空空如也</string>
    <string name="music_loading">正在加载本地音乐...</string>
    <string name="title_activity_rtmp_room_demo">RtmpRoomDemoActivity</string>
</resources>