<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/reTitle"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:id="@+id/reLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dip" >

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:text="@string/app_name"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="@dimen/level_1"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@+id/tvName"
                android:layout_marginTop="5dp"
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/level_4"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reLogo"
            android:padding="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="官方网址："
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_addr"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4" />
            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_hotline"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHotline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotline_num"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/statement"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:lineSpacingExtra="5dp"
                android:text="@string/statement_content1"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_4" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/supply_unit"
            android:textColor="@color/text_color4"
            android:textSize="@dimen/level_5" />
    </RelativeLayout>

</LinearLayout>