<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="250dip"
        android:layout_height="80dip"
        android:background="@drawable/corner_top_white"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_success"
            android:textColor="@color/black"
            android:textSize="@dimen/level_3" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/upload_success_prompt"
            android:textColor="@color/black"
            android:lineSpacingExtra="3dp"
            android:textSize="@dimen/level_4" />
    </LinearLayout>

    <TextView
        android:layout_width="250dip"
        android:layout_height="0.5dip"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/llPositive"
        android:layout_width="250dip"
        android:layout_height="40dip"
        android:background="@drawable/dialog_bottom_btn"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="#1e90ff"
            android:textSize="@dimen/level_4" />
    </LinearLayout>

</LinearLayout>