<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="120dip"
            android:layout_height="137dip"
            android:layout_centerInParent="true"
            android:src="@drawable/iv_six_empty" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_pain"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/live_complete"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_4" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="0.5dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/vertical_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/back_head_page"
        android:textColor="@color/text_color1"
        android:textSize="@dimen/level_2" />

    <ImageView
        android:layout_width="0.5dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:background="@drawable/vertical_line" />

    <RelativeLayout
        android:id="@+id/reHome"
        android:layout_width="120dip"
        android:layout_height="137dip"
        android:background="@drawable/iv_home" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dip"
            android:text="@string/head_page"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/level_4" />
    </RelativeLayout>

</LinearLayout>