<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/corner_edittext_white"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/input_search_content"
                    android:singleLine="true"
                    android:textColor="#6c6c6c"
                    android:textSize="@dimen/level_5" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.ProgressBar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/cancel"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_4" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/reTitle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="bottom" >

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/iv_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/video_wall"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_3" />

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="25dip"
                android:layout_height="20dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:background="@drawable/iv_search"
                android:clickable="true" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/llUploadYes"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:background="@drawable/red_bg"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvUploadYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/most_new"
                    android:textColor="@color/text_color1"
                    android:textSize="@dimen/level_4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llUploadNo"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:background="@drawable/white_bg"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvUploadNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/most_hot"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_4" />
            </LinearLayout>
        </LinearLayout>

        <com.hf.live.view.MainViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <ListView
            android:id="@+id/searchListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/transparent"
            android:divider="@color/transparent"
            android:dividerHeight="3dip"
            android:listSelector="@color/transparent"
            android:padding="3dip"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>