<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/reTitle"
        layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/input_alipay_username"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/level_4" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/corner_edittext_transparent"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/level_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/input_alipay_pwd"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/level_4" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/corner_edittext_transparent"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/level_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="50dip"
            android:gravity="center" >

            <TextView
                android:id="@+id/tvExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_edittext_transparent"
                android:gravity="center"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/apply_exchange"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_4" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>